lab4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_block -> { instructions }
Rule 4     instructions -> instruction instructions
Rule 5     instructions -> instruction
Rule 6     instruction -> assignment ;
Rule 7     instruction -> if_instruction
Rule 8     instruction -> for_instruction
Rule 9     instruction -> while_instruction
Rule 10    instruction -> print_instruction
Rule 11    instruction -> loop_instruction
Rule 12    instruction -> return_instruction
Rule 13    instruction -> instructions_block
Rule 14    if_instruction -> IF ( relational_expr ) instructions_block
Rule 15    if_instruction -> IF ( relational_expr ) instruction
Rule 16    if_instruction -> IF ( relational_expr ) instructions_block ELSE instruction
Rule 17    if_instruction -> IF ( relational_expr ) instruction ELSE instruction
Rule 18    for_instruction -> FOR ID = INTNUM : ID instructions_block
Rule 19    for_instruction -> FOR ID = INTNUM : ID instruction
Rule 20    for_instruction -> FOR ID = ID : ID instructions_block
Rule 21    for_instruction -> FOR ID = ID : ID instruction
Rule 22    while_instruction -> WHILE ( relational_expr ) instructions_block
Rule 23    while_instruction -> WHILE ( relational_expr ) instruction
Rule 24    loop_instruction -> BREAK ;
Rule 25    loop_instruction -> CONTINUE ;
Rule 26    return_instruction -> RETURN expr ;
Rule 27    print_instruction -> PRINT print_list ;
Rule 28    print_list -> print_list , expr
Rule 29    print_list -> print_list , STRING
Rule 30    print_list -> expr
Rule 31    print_list -> STRING
Rule 32    assignment -> ID = token
Rule 33    assignment -> ID ADDASSIGN token
Rule 34    assignment -> ID SUBASSIGN token
Rule 35    assignment -> ID MULASSIGN token
Rule 36    assignment -> ID DIVASSIGN token
Rule 37    assignment -> MID = elem
Rule 38    token -> ID
Rule 39    token -> int
Rule 40    token -> float
Rule 41    token -> matrix
Rule 42    token -> expr
Rule 43    token -> matrix_expr
Rule 44    token -> unary_expr
Rule 45    expr -> expr + term
Rule 46    expr -> expr - term
Rule 47    expr -> term
Rule 48    term -> term * factor
Rule 49    term -> term / factor
Rule 50    term -> factor
Rule 51    factor -> ( expr )
Rule 52    factor -> elem
Rule 53    relational_expr -> expr GREATEREQUAL expr
Rule 54    relational_expr -> expr EQUALS expr
Rule 55    relational_expr -> expr NOTEQUALS expr
Rule 56    relational_expr -> expr LOWEREQUAL expr
Rule 57    relational_expr -> expr < expr
Rule 58    relational_expr -> expr > expr
Rule 59    MID -> ID [ INTNUM , INTNUM ]
Rule 60    matrix -> [ outerlist ]
Rule 61    matrix -> ONES ( int )
Rule 62    matrix -> ZEROS ( int )
Rule 63    matrix -> EYE ( int )
Rule 64    vector -> [ innerlist ]
Rule 65    outerlist -> outerlist ; innerlist
Rule 66    outerlist -> innerlist
Rule 67    innerlist -> innerlist , elem
Rule 68    innerlist -> elem
Rule 69    elem -> ID
Rule 70    elem -> int
Rule 71    elem -> float
Rule 72    matrix_expr -> matrix_expr DOTADD matrix_term
Rule 73    matrix_expr -> matrix_expr DOTSUB matrix_term
Rule 74    matrix_expr -> matrix_term
Rule 75    matrix_term -> matrix_term DOTMUL matrix_factor
Rule 76    matrix_term -> matrix_term DOTDIV matrix_factor
Rule 77    matrix_term -> matrix_factor
Rule 78    matrix_factor -> ( matrix_expr )
Rule 79    matrix_factor -> matrix
Rule 80    matrix_factor -> ID
Rule 81    unary_expr -> - expr
Rule 82    unary_expr -> matrix_expr '
Rule 83    int -> INTNUM
Rule 84    float -> FLONUM

Terminals, with rules where they appear

'                    : 82
(                    : 14 15 16 17 22 23 51 61 62 63 78
)                    : 14 15 16 17 22 23 51 61 62 63 78
*                    : 48
+                    : 45
,                    : 28 29 59 67
-                    : 46 81
/                    : 49
:                    : 18 19 20 21
;                    : 6 24 25 26 27 65
<                    : 57
=                    : 18 19 20 21 32 37
>                    : 58
ADDASSIGN            : 33
BREAK                : 24
COMMENT              : 
CONTINUE             : 25
DIVASSIGN            : 36
DOTADD               : 72
DOTDIV               : 76
DOTMUL               : 75
DOTSUB               : 73
ELSE                 : 16 17
EQUALS               : 54
EYE                  : 63
FLONUM               : 84
FOR                  : 18 19 20 21
GREATEREQUAL         : 53
ID                   : 18 18 19 19 20 20 20 21 21 21 32 33 34 35 36 38 59 69 80
IF                   : 14 15 16 17
INTNUM               : 18 19 59 59 83
LOWEREQUAL           : 56
MULASSIGN            : 35
NOTEQUALS            : 55
ONES                 : 61
PRINT                : 27
RETURN               : 26
STRING               : 29 31
SUBASSIGN            : 34
WHILE                : 22 23
ZEROS                : 62
[                    : 59 60 64
]                    : 59 60 64
error                : 
{                    : 3
}                    : 3

Nonterminals, with rules where they appear

MID                  : 37
assignment           : 6
elem                 : 37 52 67 68
expr                 : 26 28 30 42 45 46 51 53 53 54 54 55 55 56 56 57 57 58 58 81
factor               : 48 49 50
float                : 40 71
for_instruction      : 8
if_instruction       : 7
innerlist            : 64 65 66 67
instruction          : 4 5 15 16 17 17 19 21 23
instructions         : 2 3 4
instructions_block   : 13 14 16 18 20 22
instructions_opt     : 1
int                  : 39 61 62 63 70
loop_instruction     : 11
matrix               : 41 79
matrix_expr          : 43 72 73 78 82
matrix_factor        : 75 76 77
matrix_term          : 72 73 74 75 76
outerlist            : 60 65
print_instruction    : 10
print_list           : 27 28 29
program              : 0
relational_expr      : 14 15 16 17 22 23
return_instruction   : 12
term                 : 45 46 47 48 49
token                : 32 33 34 35 36
unary_expr           : 44
vector               : 
while_instruction    : 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (4) instructions -> . instruction instructions
    (5) instructions -> . instruction
    (6) instruction -> . assignment ;
    (7) instruction -> . if_instruction
    (8) instruction -> . for_instruction
    (9) instruction -> . while_instruction
    (10) instruction -> . print_instruction
    (11) instruction -> . loop_instruction
    (12) instruction -> . return_instruction
    (13) instruction -> . instructions_block
    (32) assignment -> . ID = token
    (33) assignment -> . ID ADDASSIGN token
    (34) assignment -> . ID SUBASSIGN token
    (35) assignment -> . ID MULASSIGN token
    (36) assignment -> . ID DIVASSIGN token
    (37) assignment -> . MID = elem
    (14) if_instruction -> . IF ( relational_expr ) instructions_block
    (15) if_instruction -> . IF ( relational_expr ) instruction
    (16) if_instruction -> . IF ( relational_expr ) instructions_block ELSE instruction
    (17) if_instruction -> . IF ( relational_expr ) instruction ELSE instruction
    (18) for_instruction -> . FOR ID = INTNUM : ID instructions_block
    (19) for_instruction -> . FOR ID = INTNUM : ID instruction
    (20) for_instruction -> . FOR ID = ID : ID instructions_block
    (21) for_instruction -> . FOR ID = ID : ID instruction
    (22) while_instruction -> . WHILE ( relational_expr ) instructions_block
    (23) while_instruction -> . WHILE ( relational_expr ) instruction
    (27) print_instruction -> . PRINT print_list ;
    (24) loop_instruction -> . BREAK ;
    (25) loop_instruction -> . CONTINUE ;
    (26) return_instruction -> . RETURN expr ;
    (3) instructions_block -> . { instructions }
    (59) MID -> . ID [ INTNUM , INTNUM ]

    ID              shift and go to state 13
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 17
    PRINT           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    {               shift and go to state 22

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    assignment                     shift and go to state 5
    if_instruction                 shift and go to state 6
    for_instruction                shift and go to state 7
    while_instruction              shift and go to state 8
    print_instruction              shift and go to state 9
    loop_instruction               shift and go to state 10
    return_instruction             shift and go to state 11
    instructions_block             shift and go to state 12
    MID                            shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .

    $end            reduce using rule 2 (instructions_opt -> instructions .)


state 4

    (4) instructions -> instruction . instructions
    (5) instructions -> instruction .
    (4) instructions -> . instruction instructions
    (5) instructions -> . instruction
    (6) instruction -> . assignment ;
    (7) instruction -> . if_instruction
    (8) instruction -> . for_instruction
    (9) instruction -> . while_instruction
    (10) instruction -> . print_instruction
    (11) instruction -> . loop_instruction
    (12) instruction -> . return_instruction
    (13) instruction -> . instructions_block
    (32) assignment -> . ID = token
    (33) assignment -> . ID ADDASSIGN token
    (34) assignment -> . ID SUBASSIGN token
    (35) assignment -> . ID MULASSIGN token
    (36) assignment -> . ID DIVASSIGN token
    (37) assignment -> . MID = elem
    (14) if_instruction -> . IF ( relational_expr ) instructions_block
    (15) if_instruction -> . IF ( relational_expr ) instruction
    (16) if_instruction -> . IF ( relational_expr ) instructions_block ELSE instruction
    (17) if_instruction -> . IF ( relational_expr ) instruction ELSE instruction
    (18) for_instruction -> . FOR ID = INTNUM : ID instructions_block
    (19) for_instruction -> . FOR ID = INTNUM : ID instruction
    (20) for_instruction -> . FOR ID = ID : ID instructions_block
    (21) for_instruction -> . FOR ID = ID : ID instruction
    (22) while_instruction -> . WHILE ( relational_expr ) instructions_block
    (23) while_instruction -> . WHILE ( relational_expr ) instruction
    (27) print_instruction -> . PRINT print_list ;
    (24) loop_instruction -> . BREAK ;
    (25) loop_instruction -> . CONTINUE ;
    (26) return_instruction -> . RETURN expr ;
    (3) instructions_block -> . { instructions }
    (59) MID -> . ID [ INTNUM , INTNUM ]

    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)
    ID              shift and go to state 13
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 17
    PRINT           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    {               shift and go to state 22

    instruction                    shift and go to state 4
    instructions                   shift and go to state 23
    assignment                     shift and go to state 5
    if_instruction                 shift and go to state 6
    for_instruction                shift and go to state 7
    while_instruction              shift and go to state 8
    print_instruction              shift and go to state 9
    loop_instruction               shift and go to state 10
    return_instruction             shift and go to state 11
    instructions_block             shift and go to state 12
    MID                            shift and go to state 14

state 5

    (6) instruction -> assignment . ;

    ;               shift and go to state 24


state 6

    (7) instruction -> if_instruction .

    ID              reduce using rule 7 (instruction -> if_instruction .)
    IF              reduce using rule 7 (instruction -> if_instruction .)
    FOR             reduce using rule 7 (instruction -> if_instruction .)
    WHILE           reduce using rule 7 (instruction -> if_instruction .)
    PRINT           reduce using rule 7 (instruction -> if_instruction .)
    BREAK           reduce using rule 7 (instruction -> if_instruction .)
    CONTINUE        reduce using rule 7 (instruction -> if_instruction .)
    RETURN          reduce using rule 7 (instruction -> if_instruction .)
    {               reduce using rule 7 (instruction -> if_instruction .)
    $end            reduce using rule 7 (instruction -> if_instruction .)
    }               reduce using rule 7 (instruction -> if_instruction .)
    ELSE            reduce using rule 7 (instruction -> if_instruction .)


state 7

    (8) instruction -> for_instruction .

    ID              reduce using rule 8 (instruction -> for_instruction .)
    IF              reduce using rule 8 (instruction -> for_instruction .)
    FOR             reduce using rule 8 (instruction -> for_instruction .)
    WHILE           reduce using rule 8 (instruction -> for_instruction .)
    PRINT           reduce using rule 8 (instruction -> for_instruction .)
    BREAK           reduce using rule 8 (instruction -> for_instruction .)
    CONTINUE        reduce using rule 8 (instruction -> for_instruction .)
    RETURN          reduce using rule 8 (instruction -> for_instruction .)
    {               reduce using rule 8 (instruction -> for_instruction .)
    $end            reduce using rule 8 (instruction -> for_instruction .)
    }               reduce using rule 8 (instruction -> for_instruction .)
    ELSE            reduce using rule 8 (instruction -> for_instruction .)


state 8

    (9) instruction -> while_instruction .

    ID              reduce using rule 9 (instruction -> while_instruction .)
    IF              reduce using rule 9 (instruction -> while_instruction .)
    FOR             reduce using rule 9 (instruction -> while_instruction .)
    WHILE           reduce using rule 9 (instruction -> while_instruction .)
    PRINT           reduce using rule 9 (instruction -> while_instruction .)
    BREAK           reduce using rule 9 (instruction -> while_instruction .)
    CONTINUE        reduce using rule 9 (instruction -> while_instruction .)
    RETURN          reduce using rule 9 (instruction -> while_instruction .)
    {               reduce using rule 9 (instruction -> while_instruction .)
    $end            reduce using rule 9 (instruction -> while_instruction .)
    }               reduce using rule 9 (instruction -> while_instruction .)
    ELSE            reduce using rule 9 (instruction -> while_instruction .)


state 9

    (10) instruction -> print_instruction .

    ID              reduce using rule 10 (instruction -> print_instruction .)
    IF              reduce using rule 10 (instruction -> print_instruction .)
    FOR             reduce using rule 10 (instruction -> print_instruction .)
    WHILE           reduce using rule 10 (instruction -> print_instruction .)
    PRINT           reduce using rule 10 (instruction -> print_instruction .)
    BREAK           reduce using rule 10 (instruction -> print_instruction .)
    CONTINUE        reduce using rule 10 (instruction -> print_instruction .)
    RETURN          reduce using rule 10 (instruction -> print_instruction .)
    {               reduce using rule 10 (instruction -> print_instruction .)
    $end            reduce using rule 10 (instruction -> print_instruction .)
    }               reduce using rule 10 (instruction -> print_instruction .)
    ELSE            reduce using rule 10 (instruction -> print_instruction .)


state 10

    (11) instruction -> loop_instruction .

    ID              reduce using rule 11 (instruction -> loop_instruction .)
    IF              reduce using rule 11 (instruction -> loop_instruction .)
    FOR             reduce using rule 11 (instruction -> loop_instruction .)
    WHILE           reduce using rule 11 (instruction -> loop_instruction .)
    PRINT           reduce using rule 11 (instruction -> loop_instruction .)
    BREAK           reduce using rule 11 (instruction -> loop_instruction .)
    CONTINUE        reduce using rule 11 (instruction -> loop_instruction .)
    RETURN          reduce using rule 11 (instruction -> loop_instruction .)
    {               reduce using rule 11 (instruction -> loop_instruction .)
    $end            reduce using rule 11 (instruction -> loop_instruction .)
    }               reduce using rule 11 (instruction -> loop_instruction .)
    ELSE            reduce using rule 11 (instruction -> loop_instruction .)


state 11

    (12) instruction -> return_instruction .

    ID              reduce using rule 12 (instruction -> return_instruction .)
    IF              reduce using rule 12 (instruction -> return_instruction .)
    FOR             reduce using rule 12 (instruction -> return_instruction .)
    WHILE           reduce using rule 12 (instruction -> return_instruction .)
    PRINT           reduce using rule 12 (instruction -> return_instruction .)
    BREAK           reduce using rule 12 (instruction -> return_instruction .)
    CONTINUE        reduce using rule 12 (instruction -> return_instruction .)
    RETURN          reduce using rule 12 (instruction -> return_instruction .)
    {               reduce using rule 12 (instruction -> return_instruction .)
    $end            reduce using rule 12 (instruction -> return_instruction .)
    }               reduce using rule 12 (instruction -> return_instruction .)
    ELSE            reduce using rule 12 (instruction -> return_instruction .)


state 12

    (13) instruction -> instructions_block .

    ID              reduce using rule 13 (instruction -> instructions_block .)
    IF              reduce using rule 13 (instruction -> instructions_block .)
    FOR             reduce using rule 13 (instruction -> instructions_block .)
    WHILE           reduce using rule 13 (instruction -> instructions_block .)
    PRINT           reduce using rule 13 (instruction -> instructions_block .)
    BREAK           reduce using rule 13 (instruction -> instructions_block .)
    CONTINUE        reduce using rule 13 (instruction -> instructions_block .)
    RETURN          reduce using rule 13 (instruction -> instructions_block .)
    {               reduce using rule 13 (instruction -> instructions_block .)
    $end            reduce using rule 13 (instruction -> instructions_block .)
    }               reduce using rule 13 (instruction -> instructions_block .)
    ELSE            reduce using rule 13 (instruction -> instructions_block .)


state 13

    (32) assignment -> ID . = token
    (33) assignment -> ID . ADDASSIGN token
    (34) assignment -> ID . SUBASSIGN token
    (35) assignment -> ID . MULASSIGN token
    (36) assignment -> ID . DIVASSIGN token
    (59) MID -> ID . [ INTNUM , INTNUM ]

    =               shift and go to state 25
    ADDASSIGN       shift and go to state 26
    SUBASSIGN       shift and go to state 27
    MULASSIGN       shift and go to state 28
    DIVASSIGN       shift and go to state 29
    [               shift and go to state 30


state 14

    (37) assignment -> MID . = elem

    =               shift and go to state 31


state 15

    (14) if_instruction -> IF . ( relational_expr ) instructions_block
    (15) if_instruction -> IF . ( relational_expr ) instruction
    (16) if_instruction -> IF . ( relational_expr ) instructions_block ELSE instruction
    (17) if_instruction -> IF . ( relational_expr ) instruction ELSE instruction

    (               shift and go to state 32


state 16

    (18) for_instruction -> FOR . ID = INTNUM : ID instructions_block
    (19) for_instruction -> FOR . ID = INTNUM : ID instruction
    (20) for_instruction -> FOR . ID = ID : ID instructions_block
    (21) for_instruction -> FOR . ID = ID : ID instruction

    ID              shift and go to state 33


state 17

    (22) while_instruction -> WHILE . ( relational_expr ) instructions_block
    (23) while_instruction -> WHILE . ( relational_expr ) instruction

    (               shift and go to state 34


state 18

    (27) print_instruction -> PRINT . print_list ;
    (28) print_list -> . print_list , expr
    (29) print_list -> . print_list , STRING
    (30) print_list -> . expr
    (31) print_list -> . STRING
    (45) expr -> . expr + term
    (46) expr -> . expr - term
    (47) expr -> . term
    (48) term -> . term * factor
    (49) term -> . term / factor
    (50) term -> . factor
    (51) factor -> . ( expr )
    (52) factor -> . elem
    (69) elem -> . ID
    (70) elem -> . int
    (71) elem -> . float
    (83) int -> . INTNUM
    (84) float -> . FLONUM

    STRING          shift and go to state 37
    (               shift and go to state 40
    ID              shift and go to state 42
    INTNUM          shift and go to state 45
    FLONUM          shift and go to state 46

    print_list                     shift and go to state 35
    expr                           shift and go to state 36
    term                           shift and go to state 38
    factor                         shift and go to state 39
    elem                           shift and go to state 41
    int                            shift and go to state 43
    float                          shift and go to state 44

state 19

    (24) loop_instruction -> BREAK . ;

    ;               shift and go to state 47


state 20

    (25) loop_instruction -> CONTINUE . ;

    ;               shift and go to state 48


state 21

    (26) return_instruction -> RETURN . expr ;
    (45) expr -> . expr + term
    (46) expr -> . expr - term
    (47) expr -> . term
    (48) term -> . term * factor
    (49) term -> . term / factor
    (50) term -> . factor
    (51) factor -> . ( expr )
    (52) factor -> . elem
    (69) elem -> . ID
    (70) elem -> . int
    (71) elem -> . float
    (83) int -> . INTNUM
    (84) float -> . FLONUM

    (               shift and go to state 40
    ID              shift and go to state 42
    INTNUM          shift and go to state 45
    FLONUM          shift and go to state 46

    expr                           shift and go to state 49
    term                           shift and go to state 38
    factor                         shift and go to state 39
    elem                           shift and go to state 41
    int                            shift and go to state 43
    float                          shift and go to state 44

state 22

    (3) instructions_block -> { . instructions }
    (4) instructions -> . instruction instructions
    (5) instructions -> . instruction
    (6) instruction -> . assignment ;
    (7) instruction -> . if_instruction
    (8) instruction -> . for_instruction
    (9) instruction -> . while_instruction
    (10) instruction -> . print_instruction
    (11) instruction -> . loop_instruction
    (12) instruction -> . return_instruction
    (13) instruction -> . instructions_block
    (32) assignment -> . ID = token
    (33) assignment -> . ID ADDASSIGN token
    (34) assignment -> . ID SUBASSIGN token
    (35) assignment -> . ID MULASSIGN token
    (36) assignment -> . ID DIVASSIGN token
    (37) assignment -> . MID = elem
    (14) if_instruction -> . IF ( relational_expr ) instructions_block
    (15) if_instruction -> . IF ( relational_expr ) instruction
    (16) if_instruction -> . IF ( relational_expr ) instructions_block ELSE instruction
    (17) if_instruction -> . IF ( relational_expr ) instruction ELSE instruction
    (18) for_instruction -> . FOR ID = INTNUM : ID instructions_block
    (19) for_instruction -> . FOR ID = INTNUM : ID instruction
    (20) for_instruction -> . FOR ID = ID : ID instructions_block
    (21) for_instruction -> . FOR ID = ID : ID instruction
    (22) while_instruction -> . WHILE ( relational_expr ) instructions_block
    (23) while_instruction -> . WHILE ( relational_expr ) instruction
    (27) print_instruction -> . PRINT print_list ;
    (24) loop_instruction -> . BREAK ;
    (25) loop_instruction -> . CONTINUE ;
    (26) return_instruction -> . RETURN expr ;
    (3) instructions_block -> . { instructions }
    (59) MID -> . ID [ INTNUM , INTNUM ]

    ID              shift and go to state 13
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 17
    PRINT           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    {               shift and go to state 22

    instructions                   shift and go to state 50
    instruction                    shift and go to state 4
    assignment                     shift and go to state 5
    if_instruction                 shift and go to state 6
    for_instruction                shift and go to state 7
    while_instruction              shift and go to state 8
    print_instruction              shift and go to state 9
    loop_instruction               shift and go to state 10
    return_instruction             shift and go to state 11
    instructions_block             shift and go to state 12
    MID                            shift and go to state 14

state 23

    (4) instructions -> instruction instructions .

    $end            reduce using rule 4 (instructions -> instruction instructions .)
    }               reduce using rule 4 (instructions -> instruction instructions .)


state 24

    (6) instruction -> assignment ; .

    ID              reduce using rule 6 (instruction -> assignment ; .)
    IF              reduce using rule 6 (instruction -> assignment ; .)
    FOR             reduce using rule 6 (instruction -> assignment ; .)
    WHILE           reduce using rule 6 (instruction -> assignment ; .)
    PRINT           reduce using rule 6 (instruction -> assignment ; .)
    BREAK           reduce using rule 6 (instruction -> assignment ; .)
    CONTINUE        reduce using rule 6 (instruction -> assignment ; .)
    RETURN          reduce using rule 6 (instruction -> assignment ; .)
    {               reduce using rule 6 (instruction -> assignment ; .)
    $end            reduce using rule 6 (instruction -> assignment ; .)
    }               reduce using rule 6 (instruction -> assignment ; .)
    ELSE            reduce using rule 6 (instruction -> assignment ; .)


state 25

    (32) assignment -> ID = . token
    (38) token -> . ID
    (39) token -> . int
    (40) token -> . float
    (41) token -> . matrix
    (42) token -> . expr
    (43) token -> . matrix_expr
    (44) token -> . unary_expr
    (83) int -> . INTNUM
    (84) float -> . FLONUM
    (60) matrix -> . [ outerlist ]
    (61) matrix -> . ONES ( int )
    (62) matrix -> . ZEROS ( int )
    (63) matrix -> . EYE ( int )
    (45) expr -> . expr + term
    (46) expr -> . expr - term
    (47) expr -> . term
    (72) matrix_expr -> . matrix_expr DOTADD matrix_term
    (73) matrix_expr -> . matrix_expr DOTSUB matrix_term
    (74) matrix_expr -> . matrix_term
    (81) unary_expr -> . - expr
    (82) unary_expr -> . matrix_expr '
    (48) term -> . term * factor
    (49) term -> . term / factor
    (50) term -> . factor
    (75) matrix_term -> . matrix_term DOTMUL matrix_factor
    (76) matrix_term -> . matrix_term DOTDIV matrix_factor
    (77) matrix_term -> . matrix_factor
    (51) factor -> . ( expr )
    (52) factor -> . elem
    (78) matrix_factor -> . ( matrix_expr )
    (79) matrix_factor -> . matrix
    (80) matrix_factor -> . ID
    (69) elem -> . ID
    (70) elem -> . int
    (71) elem -> . float

    ID              shift and go to state 51
    INTNUM          shift and go to state 45
    FLONUM          shift and go to state 46
    [               shift and go to state 59
    ONES            shift and go to state 60
    ZEROS           shift and go to state 62
    EYE             shift and go to state 63
    -               shift and go to state 64
    (               shift and go to state 61

    token                          shift and go to state 52
    int                            shift and go to state 53
    float                          shift and go to state 54
    matrix                         shift and go to state 55
    expr                           shift and go to state 56
    matrix_expr                    shift and go to state 57
    unary_expr                     shift and go to state 58
    term                           shift and go to state 38
    matrix_term                    shift and go to state 65
    factor                         shift and go to state 39
    matrix_factor                  shift and go to state 66
    elem                           shift and go to state 41

state 26

    (33) assignment -> ID ADDASSIGN . token
    (38) token -> . ID
    (39) token -> . int
    (40) token -> . float
    (41) token -> . matrix
    (42) token -> . expr
    (43) token -> . matrix_expr
    (44) token -> . unary_expr
    (83) int -> . INTNUM
    (84) float -> . FLONUM
    (60) matrix -> . [ outerlist ]
    (61) matrix -> . ONES ( int )
    (62) matrix -> . ZEROS ( int )
    (63) matrix -> . EYE ( int )
    (45) expr -> . expr + term
    (46) expr -> . expr - term
    (47) expr -> . term
    (72) matrix_expr -> . matrix_expr DOTADD matrix_term
    (73) matrix_expr -> . matrix_expr DOTSUB matrix_term
    (74) matrix_expr -> . matrix_term
    (81) unary_expr -> . - expr
    (82) unary_expr -> . matrix_expr '
    (48) term -> . term * factor
    (49) term -> . term / factor
    (50) term -> . factor
    (75) matrix_term -> . matrix_term DOTMUL matrix_factor
    (76) matrix_term -> . matrix_term DOTDIV matrix_factor
    (77) matrix_term -> . matrix_factor
    (51) factor -> . ( expr )
    (52) factor -> . elem
    (78) matrix_factor -> . ( matrix_expr )
    (79) matrix_factor -> . matrix
    (80) matrix_factor -> . ID
    (69) elem -> . ID
    (70) elem -> . int
    (71) elem -> . float

    ID              shift and go to state 51
    INTNUM          shift and go to state 45
    FLONUM          shift and go to state 46
    [               shift and go to state 59
    ONES            shift and go to state 60
    ZEROS           shift and go to state 62
    EYE             shift and go to state 63
    -               shift and go to state 64
    (               shift and go to state 61

    token                          shift and go to state 67
    int                            shift and go to state 53
    float                          shift and go to state 54
    matrix                         shift and go to state 55
    expr                           shift and go to state 56
    matrix_expr                    shift and go to state 57
    unary_expr                     shift and go to state 58
    term                           shift and go to state 38
    matrix_term                    shift and go to state 65
    factor                         shift and go to state 39
    matrix_factor                  shift and go to state 66
    elem                           shift and go to state 41

state 27

    (34) assignment -> ID SUBASSIGN . token
    (38) token -> . ID
    (39) token -> . int
    (40) token -> . float
    (41) token -> . matrix
    (42) token -> . expr
    (43) token -> . matrix_expr
    (44) token -> . unary_expr
    (83) int -> . INTNUM
    (84) float -> . FLONUM
    (60) matrix -> . [ outerlist ]
    (61) matrix -> . ONES ( int )
    (62) matrix -> . ZEROS ( int )
    (63) matrix -> . EYE ( int )
    (45) expr -> . expr + term
    (46) expr -> . expr - term
    (47) expr -> . term
    (72) matrix_expr -> . matrix_expr DOTADD matrix_term
    (73) matrix_expr -> . matrix_expr DOTSUB matrix_term
    (74) matrix_expr -> . matrix_term
    (81) unary_expr -> . - expr
    (82) unary_expr -> . matrix_expr '
    (48) term -> . term * factor
    (49) term -> . term / factor
    (50) term -> . factor
    (75) matrix_term -> . matrix_term DOTMUL matrix_factor
    (76) matrix_term -> . matrix_term DOTDIV matrix_factor
    (77) matrix_term -> . matrix_factor
    (51) factor -> . ( expr )
    (52) factor -> . elem
    (78) matrix_factor -> . ( matrix_expr )
    (79) matrix_factor -> . matrix
    (80) matrix_factor -> . ID
    (69) elem -> . ID
    (70) elem -> . int
    (71) elem -> . float

    ID              shift and go to state 51
    INTNUM          shift and go to state 45
    FLONUM          shift and go to state 46
    [               shift and go to state 59
    ONES            shift and go to state 60
    ZEROS           shift and go to state 62
    EYE             shift and go to state 63
    -               shift and go to state 64
    (               shift and go to state 61

    token                          shift and go to state 68
    int                            shift and go to state 53
    float                          shift and go to state 54
    matrix                         shift and go to state 55
    expr                           shift and go to state 56
    matrix_expr                    shift and go to state 57
    unary_expr                     shift and go to state 58
    term                           shift and go to state 38
    matrix_term                    shift and go to state 65
    factor                         shift and go to state 39
    matrix_factor                  shift and go to state 66
    elem                           shift and go to state 41

state 28

    (35) assignment -> ID MULASSIGN . token
    (38) token -> . ID
    (39) token -> . int
    (40) token -> . float
    (41) token -> . matrix
    (42) token -> . expr
    (43) token -> . matrix_expr
    (44) token -> . unary_expr
    (83) int -> . INTNUM
    (84) float -> . FLONUM
    (60) matrix -> . [ outerlist ]
    (61) matrix -> . ONES ( int )
    (62) matrix -> . ZEROS ( int )
    (63) matrix -> . EYE ( int )
    (45) expr -> . expr + term
    (46) expr -> . expr - term
    (47) expr -> . term
    (72) matrix_expr -> . matrix_expr DOTADD matrix_term
    (73) matrix_expr -> . matrix_expr DOTSUB matrix_term
    (74) matrix_expr -> . matrix_term
    (81) unary_expr -> . - expr
    (82) unary_expr -> . matrix_expr '
    (48) term -> . term * factor
    (49) term -> . term / factor
    (50) term -> . factor
    (75) matrix_term -> . matrix_term DOTMUL matrix_factor
    (76) matrix_term -> . matrix_term DOTDIV matrix_factor
    (77) matrix_term -> . matrix_factor
    (51) factor -> . ( expr )
    (52) factor -> . elem
    (78) matrix_factor -> . ( matrix_expr )
    (79) matrix_factor -> . matrix
    (80) matrix_factor -> . ID
    (69) elem -> . ID
    (70) elem -> . int
    (71) elem -> . float

    ID              shift and go to state 51
    INTNUM          shift and go to state 45
    FLONUM          shift and go to state 46
    [               shift and go to state 59
    ONES            shift and go to state 60
    ZEROS           shift and go to state 62
    EYE             shift and go to state 63
    -               shift and go to state 64
    (               shift and go to state 61

    token                          shift and go to state 69
    int                            shift and go to state 53
    float                          shift and go to state 54
    matrix                         shift and go to state 55
    expr                           shift and go to state 56
    matrix_expr                    shift and go to state 57
    unary_expr                     shift and go to state 58
    term                           shift and go to state 38
    matrix_term                    shift and go to state 65
    factor                         shift and go to state 39
    matrix_factor                  shift and go to state 66
    elem                           shift and go to state 41

state 29

    (36) assignment -> ID DIVASSIGN . token
    (38) token -> . ID
    (39) token -> . int
    (40) token -> . float
    (41) token -> . matrix
    (42) token -> . expr
    (43) token -> . matrix_expr
    (44) token -> . unary_expr
    (83) int -> . INTNUM
    (84) float -> . FLONUM
    (60) matrix -> . [ outerlist ]
    (61) matrix -> . ONES ( int )
    (62) matrix -> . ZEROS ( int )
    (63) matrix -> . EYE ( int )
    (45) expr -> . expr + term
    (46) expr -> . expr - term
    (47) expr -> . term
    (72) matrix_expr -> . matrix_expr DOTADD matrix_term
    (73) matrix_expr -> . matrix_expr DOTSUB matrix_term
    (74) matrix_expr -> . matrix_term
    (81) unary_expr -> . - expr
    (82) unary_expr -> . matrix_expr '
    (48) term -> . term * factor
    (49) term -> . term / factor
    (50) term -> . factor
    (75) matrix_term -> . matrix_term DOTMUL matrix_factor
    (76) matrix_term -> . matrix_term DOTDIV matrix_factor
    (77) matrix_term -> . matrix_factor
    (51) factor -> . ( expr )
    (52) factor -> . elem
    (78) matrix_factor -> . ( matrix_expr )
    (79) matrix_factor -> . matrix
    (80) matrix_factor -> . ID
    (69) elem -> . ID
    (70) elem -> . int
    (71) elem -> . float
